# todoblob

./: README.md
client/: .eslintcache  package.json
client/public/: _redirects  index.html  manifest.json
client/src/: App.css  App.js  Common.js  Item.js  Lists.js  Transport.js  Views.js
server/: Cargo.toml  Containerfile  Procfile
server/k8s/: redis.yaml  server.yaml
server/src/: main.rs
