[package]
name = "mjbpr-server"
version = "0.1.0"
authors = ["Andrew Palmer <andrew.pa@outlook.com>"]
edition = "2018"

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json-patch = "0.2"
