[package]
name = "mjbpr-server"
version = "0.1.0"
authors = ["Andrew Palmer <andrew.pa@outlook.com>"]
edition = "2018"

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json-patch = "0.2"
r2d2 = "0.8"
redis = { version = "0.18", features = ["r2d2"] }
uuid = { version = "0.8", features = ["v4"] }
log = "0.4"
env_logger = "0.8"
bcrypt = "0.8"
time = "0.2"
