[package]
name = "todoblob-server"
version = "0.2.0"
authors = ["Andrew Palmer <andrew.pa@outlook.com>"]
edition = "2021"

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json-patch = "0.3"
r2d2 = "0.8"
redis = { version = "0.22", features = ["r2d2"] }
uuid = { version = "1.0", features = ["v4"] }
log = "0.4"
env_logger = "0.10"
bcrypt = "0.14"
time = "0.3"
